<resources>
    <string name="app_name">MortgageCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="missingEntries">Missing Entries</string>
    <string name="ok">OK</string>
    <string name="provideEntries">Please enter all the values</string>
    <string name="enter_amount">Enter Amount: </string>
    <string name="rate_of_interest">Interest Rate: %1$.1f</string>
    <string name="loan_period">Loan Term</string>
    <string name="taxes_and_insurance">Taxes and Insurance</string>
    <string name="calculate">Calculate</string>
    <string name="monthly_payment">The Monthly Payment: %1$.2f</string>

</resources>
