<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sumati.mortgagecalculator.MainActivity">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_amount"
            android:id="@+id/enterAmount"
            android:layout_below="@+id/textview11"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            />

        <EditText
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:id="@+id/borrowAmount"
            android:inputType="numberDecimal"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_column="2"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rate_of_interest"
            android:id="@+id/rate_textview"
            android:layout_below="@+id/amount"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/interest_rate"
            android:indeterminate="false"
            android:layout_below="@+id/rate_textview"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loan_period"
            android:id="@+id/loan_textview"
            android:layout_below="@+id/rate_textview"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loan_textview"
            android:id="@+id/radiogroup"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="7"
                android:id="@+id/radioButton1"
                android:checked="true" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="15"
                android:id="@+id/radioButton2"
                android:checked="false"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="30"
                android:id="@+id/radioButton3"
                android:checked="false" />

        </RadioGroup>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taxes_and_insurance"
            android:id="@+id/taxes"
            android:layout_below="@+id/radiogroup"
            android:checked="false"
            android:layout_marginTop="10dp"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            android:id="@+id/calculate_button"
            android:layout_below="@+id/taxes"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/monthly_payment"
            android:id="@+id/result"
            android:layout_below="@+id/calculate_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" />


</TableLayout>
